WIP 6.1.0-rc upgrade