@@ -1,31 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.7.18</version>
+    <version>3.2.3</version>
     <relativePath/>
     <!-- lookup parent from repository -->
   </parent>
   <groupId>com.activeviam.apps</groupId>
   <artifactId>pivot-spring-boot</artifactId>
-  <version>6.0.12</version>
+  <version>6.1.0-rc</version>
   <description>Template project for Spring Boot</description>
 
   <properties>
-    <java.version>17</java.version>
-    <spring-boot.version>2.7.18</spring-boot.version>
-    <spring-security.version>5.8.9</spring-security.version>
-    <activepivot.version>6.0.12</activepivot.version>
-    <activeui.version>5.1.14</activeui.version>
+    <java.version>21</java.version>
+    <spring-boot.version>3.2.3</spring-boot.version>
+    <activepivot.version>6.1.0-rc</activepivot.version>
+    <activeui.version>5.1.17</activeui.version>
     <admin-ui.version>5.1.6</admin-ui.version>
-    <!-- Logback 1.2.12 has vulnerability CVE-2023-6378   -->
-    <logback.version>1.2.13</logback.version>
 
-    <spotless-maven-plugin.version>2.41.0</spotless-maven-plugin.version>
-    <palantir-java-format.version>2.39.0</palantir-java-format.version>
-    <springdoc.version>1.7.0</springdoc.version>
+    <spotless-maven-plugin.version>2.43.0</spotless-maven-plugin.version>
+    <palantir-java-format.version>2.47.0</palantir-java-format.version>
+    <springdoc.version>2.3.0</springdoc.version>
   </properties>
 
   <dependencyManagement>
@@ -72,26 +70,35 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
+
     <dependency>
-      <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-starter-sleuth</artifactId>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-config</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-web</artifactId>
     </dependency>
 
     <!-- ActivePivot Dependencies -->
     <dependency>
-      <groupId>com.activeviam.activepivot</groupId>
-      <artifactId>activepivot-server-spring</artifactId>
+      <groupId>com.activeviam.springboot</groupId>
+      <artifactId>atoti-server-starter</artifactId>
       <version>${activepivot.version}</version>
     </dependency>
+
     <dependency>
-      <groupId>com.activeviam.apm</groupId>
-      <artifactId>apm</artifactId>
-      <version>${activepivot.version}</version>
+      <groupId>io.micrometer</groupId>
+      <artifactId>micrometer-tracing-bridge-brave</artifactId>
     </dependency>
 
     <!-- Dependencies for the content service persistence -->
     <dependency>
-      <groupId>org.hibernate</groupId>
+      <groupId>org.hibernate.orm</groupId>
       <artifactId>hibernate-core</artifactId>
     </dependency>
     <dependency>
@@ -99,7 +106,7 @@
       <artifactId>h2</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.hibernate</groupId>
+      <groupId>org.hibernate.orm</groupId>
       <artifactId>hibernate-hikaricp</artifactId>
     </dependency>
 
@@ -133,26 +140,39 @@
       <artifactId>spring-security-test</artifactId>
       <scope>test</scope>
     </dependency>
+
     <dependency>
-      <groupId>com.activeviam.activepivot</groupId>
-      <artifactId>activepivot-copper2-test</artifactId>
-      <scope>test</scope>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
     </dependency>
+
+    <!--    <dependency>-->
+    <!--      <groupId>com.activeviam.activepivot</groupId>-->
+    <!--      <artifactId>activepivot-copper2-test</artifactId>-->
+    <!--      <scope>test</scope>-->
+    <!--      <exclusions>-->
+    <!--        <exclusion>-->
+    <!--          <groupId>junit</groupId>-->
+    <!--          <artifactId>junit</artifactId>-->
+    <!--        </exclusion>-->
+    <!--      </exclusions>-->
+    <!--    </dependency>-->
     <dependency>
       <groupId>com.activeviam.tech</groupId>
       <artifactId>datastore-test</artifactId>
+      <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
-    <!-- Other dependencies -->
     <dependency>
       <groupId>org.springdoc</groupId>
-      <artifactId>springdoc-openapi-ui</artifactId>
+      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
       <version>${springdoc.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>ch.qos.logback</groupId>
-      <artifactId>logback-classic</artifactId>
-      <version>${logback.version}</version>
     </dependency>
   </dependencies>
 
@@ -229,12 +249,22 @@
               <version>${spring-boot.version}</version>
             </path>
           </annotationProcessorPaths>
+          <!-- https://github.com/spring-projects/spring-framework/wiki/Upgrading-to-Spring-Framework-6.x#parameter-name-retention -->
+          <parameters>true</parameters>
         </configuration>
       </plugin>
 
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>--add-opens java.base/java.util.concurrent=ALL-UNNAMED</argLine>
+        </configuration>
       </plugin>
     </plugins>
   </build>
